# rc

./: .gitignore  LICENSE  Makefile  Makefile.template  README.manpage  README.md  build.sh  check_cond_output_mappings.sh  check_seed_wiring.sh  check_unset_sources.sh  configure  cube.usda  cube.usdc  db_inspect.sh  debug_template.html  generated.kicad_pcb  graph.html  graph.json  meson.build  query.sh  runlog.sh  seed_missing_sources.sh
3d_models/: cube.dae  cube.scad  generate_cube.py
cryptography/nash_cipher/docs/diagrams/: permuter.dot  receiver.dot  transmitter.dot
cryptography/nash_cipher/docs/nist/: main.aux  main.fdb_latexmk  main.fls  main.tex  main.toc
cryptography/nash_cipher/docs/nist/chapters/: implementation.tex  introduction.tex  mathematical_foundations.tex
cryptography/nash_cipher/src/cryptol/: NashCore.cry  NashKeys.cry  NashTest.cry  RandData.cry  TestVectors.cry
cryptography/nash_cipher/src/rtl/: init.v  nash_cipher.v  nash_permutation_tables.v  nash_permutationn.v  test_bench.v
cryptography/nash_cipher/tools/: check_test_vectors.py  convert_to_verilog.py  generate_vectors.py  save_diagrams.sh
doc/: rc.1.md
include/: ast.h  gem.h  kicad_generator.h  netlist_generator.h  parser.h  s_expression.h  scene.h  spirv_generator.h  tokenizer.h  usd_generator.h
input/: and.inv  full_add.inv
inv/: and.json  and.sexpr  and.xml  call_and.json  call_and.sexpr  call_and.xml  call_nor.json  call_nor.sexpr  call_nor.xml  call_not.json  call_not.sexpr  call_not.xml  call_not_xor.json  call_or.json  call_or.sexpr  call_or.xml  call_rule30_cell.sexpr  call_xor.json  call_xor.sexpr  call_xor.xml  expr1.json  grid1_desrt2.json  grid1_dest.json  grid1_dest1_2.json  grid1_dest1_3.json  grid1_source.json  nor.json  nor.sexpr  nor.xml  not.json  not.sexpr  not.xml  or.json  or.sexpr  or.xml  row_driver.json  row_driver.json.bak  rule30_cell.json  rule30_cell.sexpr  rule30_cell.xml  (+7 more)
ontology/: invocation.ttl
output/: faderValue__fader5.csv  positionX__xy1.csv  positionY__xy1.csv  pressedValue__button1.csv  rotatedTo__encoder1.csv  selectedOption__radio1.csv  selectedPage__pager1.csv
output/plotly/: sample.plotly.js
rdf/: Makefile
rdf/json/: and_gate.json
rdf/ontology/: invocation.ttl
rdf/queries/: gert_connections.sparql
rdf/scripts/: json_to_ttl.py  load_rdf.py
rdf/ttl/: and_gate.ttl  figure_1.1.ttl
scripts/: brain.py  chunk.py  chunk_db.py  chunks.jsonl  plot.py  time_series_query.sh
scripts/chroma_db/: chroma.sqlite3
spirv/: AND.spvasm  NOR.spvasm  NOT.spvasm  OR.spvasm  XOR.spvasm
src/: README.md  ast.c  block.c  block.h  block_util.c  block_util.h  compiler.c  compiler.h  config.h  emit_sexpr.c  emit_sexpr.h  emit_spirv.c  emit_spirv.h  emit_util.c  emit_util.h  eval.c  eval.h  eval_util.c  eval_util.h  gap.c  gap.h  gem.c  graph.c  graph.h  instance.c  instance.h  invocation.c  invocation.h  kicad_generator.c  log.c  log.h  main.c  netlist_generator.c  osc.c  osc.h  parser.c  pubsub.c  pubsub.h  rdf.c  rdf.h  (+34 more)
src/rtl/: LICENSE  R30Field_tb.v  adder_mod2.v  and_gate.v  blink.pcf  blink.v  macros.m4  meson.build  nash_permuer.v  nash_permuter.v.m4  nash_receiver.v  nash_tb.v  nash_transmitter.v  nor_gate.v  not_gate.v  or_gate.v  r30_array.v.m4  r30_cell.v  r30_entropy_gen.tb.v  r30_entropy_gen.v  r30_field.v  tb.v  tb_nor.v  tb_r30_cell.v.m4  testbench  top.v  top.v.m4
state/: db.sqlite3  schema.sql
ui/: button1.json  encoder1.json  fader5.json  grid1.json  index.html  interface.tosc  pager1.json  radar1.json  radio1.json  xy1.json
